--- a/src/app/dialog-guide/dialog-guide.component.css
+++ b/src/app/dialog-guide/dialog-guide.component.css
@@ -1,20 +1,18 @@
-.help-content {
-  width: 100%;
-  height: 100%;
+#help-content {
+  width: initial;
+  height: 490px;
   overflow-y: auto;
 }
 
-.help-nav {
-  width: 100%;
-  height: 100%;
+#help-nav {
+  width: inherit;
+  height: 490px;
   overflow-y: auto;
 }
 
-.guide {
-  width: 700px;
+.row {
+  width: 805px;
   height: 500px;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
 
 p {
@@ -26,6 +24,7 @@ table {
   border-collapse: collapse;
   width: 100%;
   font-size: 12px;
+  text-align: center;
 }
 
 td,
@@ -34,12 +33,49 @@ th {
   padding: 8px;
 }
 
-tr:nth-child(even) {
+tr:nth-child(even),
+thead {
   background-color: #f2f2f2;
 }
 
-th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
+img {
+  width: 98%;
+  margin: 5px;
+}
+
+/* sidebar */
+.bs-docs-sidebar {
+  margin-bottom: 20px;
+}
+
+/* all links */
+.bs-docs-sidebar .nav > li > a {
+  color: #999;
+  border-left: 2px solid transparent;
+  padding: 4px 10px;
+  font-size: 12px;
+  font-weight: 400;
+  display: block;
+}
+
+/* active & hover links */
+.bs-docs-sidebar .nav > .active > a,
+.bs-docs-sidebar .nav > li > a:hover,
+.bs-docs-sidebar .nav > li > a:focus {
+  color: #44546A;
+  text-decoration: none;
+  background-color: transparent;
+  border-left-color: #44546A;
+}
+/* all active links */
+.bs-docs-sidebar .nav > .active > a,
+.bs-docs-sidebar .nav > .active:hover > a,
+.bs-docs-sidebar .nav > .active:focus > a {
+  font-weight: 700;
+}
+/* nested active links */
+.bs-docs-sidebar .nav .nav > .active > a,
+.bs-docs-sidebar .nav .nav > .active:hover > a,
+.bs-docs-sidebar .nav .nav > .active:focus > a {
+  font-weight: 500;
 }
