--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -343,7 +343,7 @@
 <!-- Fin del modal de acerca de -->
 
 <!-- Modal de ayuda -->
-<p-dialog header="Ayuda del Geovisor ANH v3" [(visible)]="modalGuide" [resizable]="false">
+<p-dialog header="Ayuda del Geovisor ANH v3" [(visible)]="modalGuide" [resizable]="false" [style]="{'width': '808px'}">
   <app-dialog-guide [flag]="modalGuide" [elementId]="sectionSelected"></app-dialog-guide>
 </p-dialog>
 <!-- Fin del modal de ayuda -->
