Ajuste: Actualización de librerías, y ajustes varios

--- a/src/app/dialog-guide/dialog-guide.component.css
+++ b/src/app/dialog-guide/dialog-guide.component.css
@@ -1,3 +1,5 @@
+@import url('https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css');
+
 #help-content {
   width: initial;
   height: 490px;
