--- a/src/app/dialog-file/dialog-file.component.html
+++ b/src/app/dialog-file/dialog-file.component.html
@@ -1,12 +1,13 @@
 <button pButton class="ui-button-rounded ui-button-secondary" title="Ayuda" style="color: #007ad8; float: right;"
-      (click)="requestHelp('h-importar')" icon="pi pi-question"></button>
+  (click)="requestHelp('h-importar')" icon="pi pi-question"></button>
 <form id="uploadForm" method="post" enctype="multipart/form-data" (ngSubmit)="onUpload($event)">
-  <input type="file" name="file" id="upload-file-input" (change)="validateFormat($event)"/> &nbsp;
+  <input type="file" name="file" id="upload-file-input" (change)="validateFormat($event)" /> &nbsp;
   <button type="submit" [disabled]="type === '.csv' && valueCoordenate === undefined || formatError">Cargar</button>
 </form>
-<div class="ui-g" style="width:250px;margin-bottom:10px" *ngIf="type === '.csv'">
+<div class="ui-g" style="width:300px;margin-bottom:10px" *ngIf="type === '.csv'">
   <div class="ui-g-12">
-    <p-radioButton name="group1" value="G" label="Geográficas (grados decimales)" [(ngModel)]="valueCoordenate" inputId="opt1">
+    <p-radioButton name="group1" value="G" label="Geográficas (grados decimales)" [(ngModel)]="valueCoordenate"
+      inputId="opt1">
     </p-radioButton>
   </div>
   <div class="ui-g-12">
@@ -15,7 +16,7 @@
   </div>
 </div>
 <br>
-<p-message id="infoMedicion" severity="info"
-text="Seleccione un <b>archivo local</b> para cargarlo como una capa sobre el mapa"></p-message>
-<br><p-message *ngIf="formatError" id="infoMedicion" severity="error"
-text="Formato no aceptado"></p-message>
+<p-message id="infoMedicion" severity="info" [escape]="false"
+  text="Seleccione un <b>archivo local</b> para cargarlo como una capa sobre el mapa"></p-message>
+<br>
+<p-message *ngIf="formatError" id="infoMedicion" severity="error" text="Formato no aceptado"></p-message>
