--- a/src/app/dialog-urlservice/dialog-urlservice.component.html
+++ b/src/app/dialog-urlservice/dialog-urlservice.component.html
@@ -8,8 +8,8 @@
           <label for="clientId">URL del Servicio</label>
         </span>
         <span class="ui-inputgroup-addon"><i class="fa fa-globe"></i></span>
-        <button pButton class="ui-button-rounded ui-button-secondary" title="Ayuda" style="color: #007ad8; float: right;"
-        (click)="requestHelp('h-importar')" icon="pi pi-question"></button>
+        <button pButton class="ui-button-rounded ui-button-secondary" title="Ayuda"
+          style="color: #007ad8; float: right;" (click)="requestHelp('h-importar')" icon="pi pi-question"></button>
       </div>
     </div>
   </div>
@@ -25,5 +25,5 @@
   </div>
 </form>
 <br>
-<p-message id="infoMedicion" severity="info" text="Ingrese la <b>dirección URL</b> del servicio que desea cargar">
+<p-message id="infoMedicion" severity="info" [escape]="false" text="Ingrese la <b>dirección URL</b> del servicio que desea cargar">
 </p-message>
