--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -594,3 +594,13 @@ p-sidebar {
   height: 25px;
   font-size: 11px;
 }
+
+::ng-deep .maxTable {
+  width: 800px;
+}
+
+::ng-deep .minTable {
+  width: 238px;
+  height: 71px;
+  background-color: white;
+}
