Ajuste: Se organiza todo lo relacionado con logos e imagenes

--- a/src/app/dialog-about/dialog-about.component.html
+++ b/src/app/dialog-about/dialog-about.component.html
@@ -6,7 +6,7 @@
     Copyright © 2013-2020
   </div>
   <div class="image">
-    <img src="assets/logo-anh-colombia.png">
+    <img src="assets/logo-anh.png" width="200px" height="91px">
     <p>Vicepresidencia Técnica</p>
   </div>
   <div class="design">
@@ -19,5 +19,5 @@
 <div class="about">
   <img src="assets/mineria.png">
 </div>
-<p-message id="infoMedicion" severity="info" text="Versión del Geovisor y Datos del Desarrollador <br>
+<p-message id="infoMedicion" severity="info" [escape]="false" text="Versión del Geovisor y Datos del Desarrollador <br>
   Usa el botón X arriba para cerrar esta ventana."></p-message>
