--- a/src/app/dialog-terminos/dialog-terminos.component.html
+++ b/src/app/dialog-terminos/dialog-terminos.component.html
@@ -3,7 +3,9 @@
     <h2>Geovisor ANH v3.0</h2>
     <h4>Terminos y Condiciones</h4>
   </div>
-  <img src="assets/logo-anh-p.png">
+  <div style="align-content: flex-end;">
+    <img src="assets/logo-anh.png" width="153px" height="70px" align="right">
+  </div>
 </div>
 <div id="body">
   <p>
