Ajuste: Solucionado busqueda en capa local

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -249,7 +249,7 @@
           {{layerSelected.title}}
         </div>
         <div>
-          <p-dialog header="Búsqueda" [(visible)]="modalFilter" [style]="{width: '500px'}" [modal]="true"
+          <p-dialog header="Búsqueda" [(visible)]="modalFilter" [style]="{width: '500px'}" [modal]="false"
             (onHide)="getFeaturesLayerSelected()" [resizable]="false" [draggable]="false" position="topleft"
             [focusOnShow]="false">
             <div style="max-height: 250px; overflow-y: scroll;">
